Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11358

ChangeDisplaySettings is missing CDS_FULLSCREEN support

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.2
    • Win32SS
    • None
    • June 2016

    Description

      When an application changes the displaymode with the CDS_FULLSCREEN flag set,
      the displaymode will be restored after this application exits.

      From testing, it seems that windows only remembers the last application that sets this,
      and when another application changes the displaymode in the mean time (with or without the CDS_FULLSCREEN flag!) the mode is not restored when the initial application is closed.

      Attachments

        Activity

          People

            learn_more Mark Jansen
            learn_more Mark Jansen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: